####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblog4cxx.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

liblog4cxx_a_METASOURCES = AUTO

liblog4cxx_a_SOURCES = appendermanager.cpp fileappender.cpp logrotate.cpp \
patternlayout.cpp loggingevent.cpp ilog.cpp bench.cpp layout.cpp appender.cpp \
logger.cpp level.cpp logsession.cpp tmplogid.cpp


EXTRA_DIST = level.cpp level.h logger.cpp logger.h appender.cpp appender.h \
nsdefs.h layout.cpp layout.h bench.cpp ilog.cpp ilog.h loggingevent.cpp \
loggingevent.h patternlayout.cpp patternlayout.h logrotate.cpp logrotate.h \
fileappender.cpp fileappender.h appendermanager.cpp appendermanager.h 

####### kdevelop will overwrite this part!!! (end)############
noinst_HEADERS = appendermanager.h
