####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = liblsshm.a

INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/src

liblsshm_a_METASOURCES = AUTO

liblsshm_a_SOURCES = lsshmlock.cpp lsshmhash.cpp lsshmpool.cpp lsshm.cpp \
	lsshmtidmgr.cpp lsshmhashobserver.cpp addrmap.cpp

#lsshmlruhash.cpp 
####### kdevelop will overwrite this part!!! (end)############
